--- a/style.css
+++ b/style.css
@@ -1,69 +1,192 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+    --main-color:rgb(218, 15, 15);
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 li {
-list-style: none; 
+  list-style: none;
 }
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 header {
-    height: 60px;
-    background-color: black;
+  height: 60px;
+  background-color: black;
 }
 header ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 header ul li {
-    padding: 15px;
-    margin: 0 10px  ;
-    border-radius: 10px;
+  padding: 15px;
+  margin: 0 10px;
+  border-radius: 10px;
 }
 header ul li:hover {
-    background-color: brown;
-
+  background-color: var(--main-color);
 }
 main {
-    height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px);
+}
+main {
+  display: flex;
+  justify-content: space-around;
+}
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  opacity: 0;
+  z-index: -10;
+  transition: 0.5s;
+}
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+}
+
+.login-box .user-box {
+  position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: var(--main-color);
+  font-size: 12px;
+}
+
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: var(--main-color);
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  letter-spacing: 3px;
+  background-color: black;
+  border-radius: 20px;
+  cursor: pointer;
+  border: 0;
+  font-weight: 600;
+}
+
+.login-box a:hover {
+  background: var(--main-color);
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px var(--main-color)
+   
+}
+
+
+.select-box label {
+    color: white;
+    text-align: left;
+}
+.select-box select {
+    width: 100%;
+    background-color: transparent;
+    color: white;
+    height: 30px;
+    margin-bottom: 20px;
+
+}
+.select-box option {
+    background: black;
+}
+.add-btn {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.add-btn button {
+    padding: 10px;
+    border: 0;
+    color: white;
+    background-color: black;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.add-btn button:hover {
+    background-color: var(--main-color);
 }
 table {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
 }
 table tr:nth-of-type(even) {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 table tr:nth-of-type(odd) {
-    background-color: #dcdcdc;
+  background-color: #dcdcdc;
 }
 table td {
-    padding: 10px;
-    text-align: center;
+  padding: 10px;
+  text-align: center;
 }
 table th {
-    background-color: #dcdcdc;
-    padding: 10px;
+  background-color: #dcdcdc;
+  padding: 10px;
 }
-footer{
-    display: flex;
-    justify-content: space-around;
-    height: 60px;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.39);
-    color: white;
+footer {
+  display: flex;
+  justify-content: space-around;
+  height: 60px;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.39);
+  color: white;
 }
 footer i {
-    color: white;
-    margin-left: 20px;
+  color: white;
+  margin-left: 20px;
 }
+ .blur {
+    filter: blur(5px);
+ }
