--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 :root {
-    --main-color:rgb(218, 15, 15);
+  --main-color: rgb(218, 15, 15);
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -16,10 +16,40 @@ a {
   text-decoration: none;
   color: white;
 }
-
+.container {
+  padding: 0 15px;
+  margin: 0 auto;
+}
+/* Small */
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+/* Medium */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+/* Large */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
 header {
   height: 60px;
   background-color: black;
+  font-variant-caps: small-caps;
+}
+header .container {
+  display: flex;
+  justify-content: space-between;
+}
+header h2 {
+  color: var(--main-color);
+  align-self: center;
 }
 header ul {
   display: flex;
@@ -34,16 +64,21 @@ header ul li {
 header ul li:hover {
   background-color: var(--main-color);
 }
+
 main {
-  min-height: calc(100vh - 120px);
+  min-height: calc(100vh);
+  padding: 60px 20px;
 }
-main {
-  display: flex;
+main .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 220px);
+  gap: 30px;
   justify-content: space-around;
 }
+
 .login-box {
   position: absolute;
-  top: 50%;
+  top: 80%;
   left: 50%;
   width: 400px;
   padding: 40px;
@@ -121,40 +156,37 @@ main {
   background: var(--main-color);
   color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px var(--main-color)
-   
+  box-shadow: 0 0 5px var(--main-color);
 }
-
 
 .select-box label {
-    color: white;
-    text-align: left;
+  color: white;
+  text-align: left;
 }
 .select-box select {
-    width: 100%;
-    background-color: transparent;
-    color: white;
-    height: 30px;
-    margin-bottom: 20px;
-
+  width: 100%;
+  background-color: transparent;
+  color: white;
+  height: 30px;
+  margin-bottom: 20px;
 }
 .select-box option {
-    background: black;
+  background: black;
 }
 .add-btn {
-    text-align: center;
-    margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 50px;
 }
 .add-btn button {
-    padding: 10px;
-    border: 0;
-    color: white;
-    background-color: black;
-    cursor: pointer;
-    transition: 0.3s;
+  padding: 10px;
+  border: 0;
+  color: white;
+  background-color: black;
+  cursor: pointer;
+  transition: 0.3s;
 }
 .add-btn button:hover {
-    background-color: var(--main-color);
+  background-color: var(--main-color);
 }
 table {
   width: 80%;
@@ -176,17 +208,64 @@ table th {
   padding: 10px;
 }
 footer {
-  display: flex;
-  justify-content: space-around;
   height: 60px;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.39);
   color: white;
 }
+footer .container {
+  display: flex;
+  justify-content: space-around;
+}
 footer i {
   color: white;
   margin-left: 20px;
 }
- .blur {
-    filter: blur(5px);
- }
+.blur {
+  filter: blur(5px);
+}
+main .card {
+  background-color: #f5f5f5;
+  height: 350px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+main .card .image {
+  height: 200px;
+  width: 100%;
+  text-align: center;
+}
+main .card .image img {
+width: 200px;
+height: 200px;
+}
+main .card .text {
+  padding: 10px;
+  position: relative;
+}
+main .card .text::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: var(--main-color);
+  bottom: -6px;
+  left: 0;
+  transition: 0.3s;
+}
+main .card:hover .text::after {
+  height: 5px;
+}
+main .card:hover {
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2), 0px 5px 10px rgba(0, 0, 0, 0.4);
+}
+main .card .text h3 {
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  color: var(--main-color);
+}
+main .card .text p {
+  margin-bottom: 5px;
+}
